# cz-biohub-test

./: .gitignore  Machine Learning Engineer Take-Home Challenge.docx  README.md  hello.py  main.py  optuna_study.db  pyproject.toml  test.ipynb  test.py
configs/: ds_config.json
figures/: part1.drawio  part2.drawio
output/: best_hyperparameters.json
output/Baseline Multimodal Model (Text + Omics, No Pretraining)/: best_hyperparameters.json
output/Hyperparameter Search with Baseline Multimodal Model/: best_hyperparameters.json
output/Hyperparameter Search with Omics-Only (Text Disabled)/: best_hyperparameters.json  final_model.pt
output/Hyperparameter Search with Pretraining/: best_hyperparameters.json
output/Omics-Only Model (Disable Text Modality)/: best_hyperparameters.json  final_model.pt
output/Pretrained Multimodal Model (With Pretraining)/: best_hyperparameters.json
sh/: cz-test.sh  cz.sh
utils/: print.py  summary.txt
wandb/: latest-run
wandb/run-20250225_080808-1hlc897o/: run-1hlc897o.wandb
wandb/run-20250225_082822-rjg7jv82/: run-rjg7jv82.wandb
wandb/run-20250225_091214-wnu0pbo8/: run-wnu0pbo8.wandb
wandb/run-20250225_094346-3jo8qgmw/: run-3jo8qgmw.wandb
wandb/run-20250225_182515-urqaof8q/: run-urqaof8q.wandb
wandb/run-20250225_182718-y8c7zzas/: run-y8c7zzas.wandb
wandb/run-20250225_194537-8exg9vkm/: run-8exg9vkm.wandb
wandb/run-20250225_194632-pl81gh07/: run-pl81gh07.wandb
wandb/run-20250225_213509-5yah1glh/: run-5yah1glh.wandb
wandb/run-20250225_213510-brwgm6a5/: run-brwgm6a5.wandb
(+120 files in other folders)
